# System-Sirdoon

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  README.md  build.rs  sirdoon-manifest.rc  sirdoon.exe.manifest
src/: main.rs
src/presetup/: mod.rs
src/run/: mod.rs
