[package]
name = "sirdoon"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
CreateProcessW = "0.1.4"
native-windows-gui = "1.0.13"
winapi = { version = "0.3.9", features = ["winuser", "winbase", "handleapi", "processthreadsapi", "synchapi", "shellapi", "winreg", "ntsecapi", "securitybaseapi", "powrprof"] }
winres = "0.1.12"


[build-dependencies]
embed-resource = "3.0.1"
winres = "0.1.12"
